# atlas

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt  FixupClangdIncludeDirs.cmake  Makefile  README.md  SetupExternalLibraries.cmake  SetupModules.cmake  VcpkgSetup.cmake  conanfile.txt  const_demo.md  flake.nix  setup-vcpkg.bat  setup-vcpkg.sh  vcpkg.json
.github/workflows/: nix-build.yml  non-nix-build.yml  vcpkg-test.yml
build-clang/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build-clang/include/: Makefile  cmake_install.cmake
build-clang/modules/hephaestus/: Makefile  cmake_install.cmake
build-clang/src/: Makefile  cmake_install.cmake
build-clang/tests/: CTestTestfile.cmake  Makefile  atlas_core[1]_include.cmake  cmake_install.cmake
cmake/: VcpkgSetup.cmake
include/: CMakeLists.txt
include/atlas/: atlas.hpp
include/atlas/common/: print_compat.hpp
include/atlas/core/: Concepts.hpp  EModules.hpp  Engine.hpp  Game.hpp  IEngine.hpp  IEngineHandle.hpp  IGame.hpp  IModule.hpp  IStartShutdown.hpp  ITickable.hpp  Module.hpp  ModuleTraits.hpp  ModulesList.def  ThreadPool.hpp
include/atlas/core/threads/: IThreadPool.hpp  ThreadPool.hpp
include/atlas/core/time/: EngineClock.hpp  IEngineClock.hpp  Timer.hpp
modules/hephaestus/: CMakeLists.txt  README_optimization.md
modules/hephaestus/include/: Hephaestus.hpp  IHephaestus.hpp
modules/hephaestus/include/hephaestus/: Archetype.hpp  ArchetypeBase.hpp  ArchetypeKey.hpp  ArchetypeMap.hpp  ArchetypeQueryContext.hpp  Common.hpp  Component.hpp  ComponentSignature.hpp  Concepts.hpp  Constants.hpp  Hashing.hpp  Hephaestus.hpp  IComponent.hpp  IHephaestus.hpp  OptimizedECS.hpp  Query.hpp  System.hpp  SystemBase.hpp  Utils.hpp
modules/hephaestus/include/hephaestus/query/: ArchetypeQueryContext.hpp  Query.hpp  QueryComponentsPipeline.hpp  QueryResult.hpp
modules/hephaestus/src/: Hephaestus.cpp
modules/hephaestus/src/hephaestus/: Archetype.cpp  Hephaestus.cpp  Utils.cpp
modules/iris/: CMakeLists.txt
modules/iris/include/iris/: Iris.hpp
modules/iris/src/: CMakeLists.txt
modules/iris/src/iris/: Iris.cpp
src/: CMakeLists.txt
src/atlas/: atlas.cpp
src/atlas/core/: Engine.cpp  Game.cpp  Module.cpp
src/atlas/core/threads/: Job.cpp  ThreadPool.cpp
src/atlas/core/time/: EngineClock.cpp  Timer.cpp
tests/: CMakeLists.txt  EngineTests.cpp  HephaestusTests.cpp  ModuleTests.cpp  TestEndToEndConst.cpp  TestEngine.cpp  TestHephaestusConst.cpp  TestMain.cpp  TestModule.cpp  TestParallelExecution.cpp  TestSystemConstIntegration.cpp  TimeTests.cpp  test_atlas.cpp
